--- a/css/style.css
+++ b/css/style.css
@@ -4494,6 +4494,58 @@ html.has-scroll-dragging {
   object-position: top center;
 }
 
+.project_tab__slider {
+  padding: 80px 80px 140px;
+  margin: 0 2px;
+  position: relative;
+  border-top: 1px solid var(--border);
+  border-bottom: 1px solid var(--border);
+  background-color: var(--bg);
+  overflow: hidden;
+}
+
+.project_tab__img {
+  width: 100%;
+  height: 100%;
+  max-width: 910px;
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+.project_tab__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center center;
+}
+
+.project_tab__swiper {
+  width: 100%;
+  height: 100%;
+  max-width: 820px;
+  max-height: 570px;
+  position: absolute;
+  top: 125px;
+  left: 50%;
+  border-radius: 20px;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+.project_tab__image {
+  width: 100%;
+  height: 100%;
+}
+
+.project_tab__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: top center;
+}
+
 .project_phone__swiper {
   overflow: hidden;
 }
@@ -6821,6 +6873,9 @@ html.has-scroll-dragging {
   .project_desktop__slider {
     padding: 60px 60px 110px;
   }
+  .project_tab__slider {
+    padding: 60px 60px 110px;
+  }
   .project_banner__inview {
     max-height: 520px;
   }
@@ -6830,6 +6885,14 @@ html.has-scroll-dragging {
   .project_desktop__swiper {
     max-width: 640px;
     max-height: 412px;
+    top: 90px;
+  }
+  .project_tab__img {
+    max-width: 620px;
+  }
+  .project_tab__swiper {
+    max-width: 550px;
+    max-height: 385px;
     top: 90px;
   }
   .project_top__info {
@@ -7350,6 +7413,9 @@ html.has-scroll-dragging {
   .project_desktop__slider {
     padding: 40px 40px 110px;
   }
+  .project_tab__slider {
+    padding: 40px 40px 110px;
+  }
   .project_banner__inview {
     max-height: 450px;
   }
@@ -7359,6 +7425,14 @@ html.has-scroll-dragging {
   .project_desktop__swiper {
     max-width: 640px;
     max-height: 408px;
+    top: 72px;
+  }
+  .project_tab__img {
+    max-width: 620px;
+  }
+  .project_tab__swiper {
+    max-width: 550px;
+    max-height: 385px;
     top: 72px;
   }
   .project_top__info {
@@ -7968,6 +8042,18 @@ html.has-scroll-dragging {
     top: 60px;
     border-radius: 10px 10px 0 0;
   }
+  .project_tab__slider {
+    padding: 40px 20px 70px;
+  }
+  .project_tab__img {
+    max-width: 400px;
+  }
+  .project_tab__swiper {
+    max-width: 355px;
+    max-height: 250px;
+    top: 60px;
+    border-radius: 10px;
+  }
   .project_top__info {
     height: 100%;
     width: 100%;
@@ -8450,6 +8536,21 @@ html.has-scroll-dragging {
     top: 50px;
     border-radius: 5px 5px 0 0;
   }
+  .project_tab__img {
+    max-width: 250px;
+  }
+  .project_tab__swiper {
+    max-width: 230px;
+    max-height: 160px;
+    top: 50px;
+  }
+  .project__info_left,
+  .project__info_right {
+    padding: 0 20px;
+  }
+  .projects__swiper_container .projects__flex {
+    padding: 0 20px 20px;
+  }
   .projects__navigation .projects__prev,
   .projects__navigation .projects__next,
   .projects__navigation .btn__arrow,
@@ -8632,7 +8733,8 @@ html.has-scroll-dragging {
 
 /* start 389px */
 @media (max-width: 389px) {
-  .project_desktop__container {
+  .project_desktop__container,
+  .project_tab__container {
     display: none;
   }
   .certificates__image img {
