--- a/css/style.css
+++ b/css/style.css
@@ -413,12 +413,20 @@ section {
 
 .cursor.cursor__slider .cursor__block,
 .cursor.cursor__showreel .cursor__block {
-  width: 100px;
-  height: 100px;
   opacity: 1;
   background-color: var(--text);
   -webkit-transition: height .2s ease, width .2s ease, opacity .2s ease, background-color .2s ease;
   transition: height .2s ease, width .2s ease, opacity .2s ease, background-color .2s ease;
+}
+
+.cursor.cursor__showreel .cursor__block {
+  width: 100px;
+  height: 100px;
+}
+
+.cursor.cursor__slider .cursor__block {
+  width: 80px;
+  height: 80px;
 }
 
 .cursor__wrapper {
