--- a/css/style.css
+++ b/css/style.css
@@ -6745,26 +6745,37 @@ html.has-scroll-dragging {
   display: -ms-flexbox;
   display: flex;
   width: 50%;
-  padding: 0 40px 40px;
   flex-direction: column;
   gap: 15px;
   float: left;
 }
 
-.articles_page__item:nth-child(1n) .projects__image,
-.articles_page__item:nth-child(6n) .projects__image {
-  height: 828px;
-}
-
-.articles_page__item:nth-child(2n) .projects__image,
-.articles_page__item:nth-child(3n) .projects__image,
-.articles_page__item:nth-child(4n) .projects__image,
-.articles_page__item:nth-child(5n) .projects__image {
+.articles_page__item:not(:nth-child(1)):not(:nth-child(3n + 1)):nth-child(1n) .articles_page__image,
+.articles_page__item:nth-child(2n) .articles_page__image,
+.articles_page__item:nth-child(3) .articles_page__image {
   height: 350px;
 }
 
-.articles_page__item:last-child .projects__image {
-  height: 828px;
+.articles_page__item:first-child .articles_page__image,
+.articles_page__item:not(:nth-child(3)):nth-child(3n + 1) .articles_page__image {
+  height: 818px;
+}
+
+.articles_page__item:nth-child(2),
+.articles_page__item:nth-child(3),
+.articles_page__item:not(:nth-child(1)):not(:nth-child(3)):not(:nth-child(6n + 1)):nth-child(3n + 1),
+.articles_page__item:not(:nth-child(6n + 4)):nth-child(6n + 2),
+.articles_page__item:not(:nth-child(6n + 5)):nth-child(6n + 3) {
+  float: right;
+  padding: 0 0 40px 40px;
+}
+
+.articles_page__item:first-child,
+.articles_page__item:nth-child(6n + 1),
+.articles_page__item:not(:nth-child(2)):not(:nth-child(6n + 2)):nth-child(3n + 2),
+.articles_page__item:not(:nth-child(3)):not(:nth-child(6n + 3)):nth-child(3n + 3) {
+  float: left;
+  padding: 0 40px 40px 0;
 }
 
 .articles_page__info {
@@ -6787,19 +6798,24 @@ html.has-scroll-dragging {
   transition: transform 0.2s linear;
 }
 
+.articles_page__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.articles_page__image {
+  position: relative;
+  overflow: hidden;
+}
+
 .articles_page__link:hover .articles_page__image img {
   -webkit-transform: scale(1.2);
   transform: scale(1.2);
   -webkit-transition: -webkit-transform 0.2s linear;
   transition: transform 0.2s linear;
-}
-
-.articles_page__info {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
 }
 
 .articles_page__arrow {
@@ -6808,11 +6824,72 @@ html.has-scroll-dragging {
 }
 
 .articles_page__item:nth-child(1n) .articles_page__arrow {
+  left: auto;
   right: 20px;
 }
 
-.articles_page__item:nth-child(2n) .articles_page__arrow {
+.articles_page__item:nth-child(2) .articles_page__arrow,
+.articles_page__item:nth-child(3) .articles_page__arrow,
+.articles_page__item:not(:nth-child(1)):not(:nth-child(3)):not(:nth-child(6n + 1)):nth-child(3n + 1) .articles_page__arrow,
+.articles_page__item:not(:nth-child(6n + 4)):nth-child(6n + 2) .articles_page__arrow,
+.articles_page__item:not(:nth-child(6n + 5)):nth-child(6n + 3) .articles_page__arrow {
   left: 20px;
+  right: auto;
+}
+
+.articles_page__item:first-child .articles_page__arrow,
+.articles_page__item:nth-child(6n + 1) .articles_page__arrow,
+.articles_page__item:not(:nth-child(2)):not(:nth-child(6n + 2)):nth-child(3n + 2) .articles_page__arrow,
+.articles_page__item:not(:nth-child(3)):not(:nth-child(6n + 3)):nth-child(3n + 3) .articles_page__arrow {
+  left: auto;
+  right: 20px;
+}
+
+.articles_page__item:nth-child(2) .articles_page__info,
+.articles_page__item:nth-child(3) .articles_page__info,
+.articles_page__item:not(:nth-child(1)):not(:nth-child(3)):not(:nth-child(6n + 1)):nth-child(3n + 1) .articles_page__info,
+.articles_page__item:not(:nth-child(6n + 4)):nth-child(6n + 2) .articles_page__info,
+.articles_page__item:not(:nth-child(6n + 5)):nth-child(6n + 3) .articles_page__info {
+  text-align: left;
+  padding: 0 100px 0 0;
+}
+
+.articles_page__item:first-child .articles_page__info,
+.articles_page__item:nth-child(6n + 1) .articles_page__info,
+.articles_page__item:not(:nth-child(2)):not(:nth-child(6n + 2)):nth-child(3n + 2) .articles_page__info,
+.articles_page__item:not(:nth-child(3)):not(:nth-child(6n + 3)):nth-child(3n + 3) .articles_page__info {
+  text-align: right;
+  padding: 0 0 0 100px;
+}
+
+.articles_page__heading {
+  display: -webkit-box;
+  max-width: 405px;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.articles_page__description {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.articles_page__item:nth-child(2) .articles_page__heading,
+.articles_page__item:nth-child(3) .articles_page__heading,
+.articles_page__item:not(:nth-child(1)):not(:nth-child(3)):not(:nth-child(6n + 1)):nth-child(3n + 1) .articles_page__heading,
+.articles_page__item:not(:nth-child(6n + 4)):nth-child(6n + 2) .articles_page__heading,
+.articles_page__item:not(:nth-child(6n + 5)):nth-child(6n + 3) .articles_page__heading {
+  margin: 0 auto 0 0;
+}
+
+.articles_page__item:first-child .articles_page__heading,
+.articles_page__item:nth-child(6n + 1) .articles_page__heading,
+.articles_page__item:not(:nth-child(2)):not(:nth-child(6n + 2)):nth-child(3n + 2) .articles_page__heading,
+.articles_page__item:not(:nth-child(3)):not(:nth-child(6n + 3)):nth-child(3n + 3) .articles_page__heading {
+  margin: 0 0 0 auto;
 }
 
 .articles_page__link:hover .btn__side_default {
