--- a/css/style.css
+++ b/css/style.css
@@ -5183,6 +5183,7 @@ html.has-scroll-dragging {
   position: absolute;
   top: 50%;
   left: calc(50% + 80px);
+  color: var(--text-gray);
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
 }
@@ -6732,12 +6733,20 @@ html.has-scroll-dragging {
 }
 
 .articles_page__list_container {
-  padding: 0;
+  padding: 0 60px;
 }
 
 .articles_page__list {
   display: inline-block;
-  padding: 80px 0;
+  padding: 80px 0 0;
+}
+
+.articles_page__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: flex-end;
+  padding: 0 100px 80px;
 }
 
 .articles_page__item {
@@ -6919,6 +6928,51 @@ html.has-scroll-dragging {
 }
 
 /* end articles_page */
+
+/* start subscription */
+
+.subscription__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 80px;
+  margin: 0 2px;
+  gap: 160px;
+  overflow: hidden;
+  position: relative;
+  border-top: 1px solid var(--border);
+}
+
+.subscription__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: calc(50% - 80px);
+  flex-direction: column;
+  gap: 40px;
+}
+
+.subscription__image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: calc(50% - 80px);
+  position: absolute;
+  top: 50%;
+  left: calc(50% + 80px);
+  color: var(--text-gray);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.subscription__image svg,
+.subscription__image img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+/* end subscription */
 
 /* start 1440px */
 @media (max-width: 1919px) {
@@ -7189,7 +7243,8 @@ html.has-scroll-dragging {
     width: calc(50% - 60px);
   }
   .services_top__image,
-  .briefing__form_end {
+  .briefing__form_end,
+  .subscription__image {
     width: calc(50% - 60px);
     left: calc(50% + 60px);
   }
@@ -7715,7 +7770,8 @@ html.has-scroll-dragging {
     width: calc(50% - 30px);
   }
   .services_top__image,
-  .briefing__form_end {
+  .briefing__form_end,
+  .subscription__image {
     width: calc(50% - 30px);
     left: calc(50% + 30px);
   }
@@ -8424,7 +8480,8 @@ html.has-scroll-dragging {
     gap: 20px;
   }
   .services_top__image,
-  .briefing__form_end {
+  .briefing__form_end,
+  .subscription__image {
     width: calc(50% - 10px);
     left: calc(50% + 10px);
   }
