--- a/css/style.css
+++ b/css/style.css
@@ -6941,6 +6941,7 @@ html.has-scroll-dragging {
   overflow: hidden;
   position: relative;
   border-top: 1px solid var(--border);
+  background-color: var(--bg);
 }
 
 .subscription__form {
