--- a/css/style.css
+++ b/css/style.css
@@ -758,6 +758,10 @@ section {
   overflow: hidden;
 }
 
+.btn.checkbox {
+  height: 40px;
+}
+
 .btn__input {
   padding: 0;
 }
@@ -6950,7 +6954,7 @@ html.has-scroll-dragging {
   display: flex;
   width: calc(50% - 80px);
   flex-direction: column;
-  gap: 40px;
+  gap: 50px;
 }
 
 .subscription__image {
@@ -6971,6 +6975,30 @@ html.has-scroll-dragging {
   width: 100%;
   height: auto;
   object-fit: cover;
+}
+
+.subscription__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.articles_page__checks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+}
+
+.subscription__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 /* end subscription */
