--- a/css/style.css
+++ b/css/style.css
@@ -7435,7 +7435,8 @@ html.has-scroll-dragging {
     padding: 100px 60px 80px;
   }
   .articles_page__block {
-    padding: 140px 60px 60px;
+    max-width: 100%;
+    padding: 140px 60px 60px 180px;
     gap: 30px;
   }
   .articles_page__checks {
