--- a/css/style.css
+++ b/css/style.css
@@ -4641,6 +4641,50 @@ html.has-scroll-dragging {
   overflow: hidden;
 }
 
+.project_present__swiper .swiper-wrapper {
+  -webkit-transition-timing-function: linear !important;
+          transition-timing-function: linear !important;
+}
+
+.project_present__block {
+  border-top: 1px solid var(--border);
+}
+
+.project_present__slider {
+  overflow: visible;
+}
+
+.project_present__item {
+  width: 50%;
+  max-width: 900px;
+}
+
+.project_present__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center center;
+}
+
+.project_present__swiper {
+  width: 100%;
+  height: 500px;
+  overflow: visible;
+}
+
+.project_present__image {
+  width: 100%;
+  height: 100%;
+  padding: 0 20px;
+}
+
+.project_present__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: top center;
+}
+
 /* end project */
 
 /* start articles */
@@ -7013,7 +7057,7 @@ html.has-scroll-dragging {
 
 /* end subscription */
 
-/* start 1440px */
+/* start 1919px */
 @media (max-width: 1919px) {
   .team__bottom_heading {
     font-size: 120px;
@@ -7195,12 +7239,17 @@ html.has-scroll-dragging {
     padding: 200px 0 80px;
     gap: 60px;
   }
-  .career_top__block {
-    padding: 120px 0 80px;
-    gap: 60px;
-  }
   .project_top__image {
     height: calc(var(--height) - 280px);
+  }
+  .projects__filter_list {
+    gap: 10px 30px;
+  }
+  .projects__right {
+    padding: 0 0 0 30px;
+  }
+  .project_present__swiper {
+    height: 360px;
   }
   .digital__container {
     max-height: 560px;
@@ -7223,12 +7272,6 @@ html.has-scroll-dragging {
   }
   .articles__top {
     padding: 0 0 40px;
-  }
-  .projects__filter_list {
-    gap: 10px 30px;
-  }
-  .projects__right {
-    padding: 0 0 0 30px;
   }
   .articles__image {
     height: 200px;
@@ -7355,6 +7398,10 @@ html.has-scroll-dragging {
   }
   .contacts__social_info {
     padding: 90px 30px;
+  }
+  .career_top__block {
+    padding: 120px 0 80px;
+    gap: 60px;
   }
   .career__left,
   .career__right,
@@ -7491,7 +7538,7 @@ html.has-scroll-dragging {
     height: 15px;
   }
 }
-/* end 1440px */
+/* end 1919px */
 
 /* start 1024px */
 @media (max-width: 1439px) {
@@ -7600,6 +7647,9 @@ html.has-scroll-dragging {
   .projects__swiper .projects__item:nth-child(1n),
   .projects__swiper .projects__item:nth-child(2n) {
     padding: 0 10px;
+  }
+  .project_present__swiper {
+    height: 320px;
   }
   .digital__container {
     height: 100%;
@@ -8478,10 +8528,6 @@ html.has-scroll-dragging {
     padding: 110px 0 40px;
     gap: 20px;
   }
-  .career_top__block {
-    padding: 40px 0;
-    gap: 20px;
-  }
   .project_top__image {
     width: calc(100% - 40px);
     height: calc(var(--height) - 220px);
@@ -8495,6 +8541,9 @@ html.has-scroll-dragging {
   }
   .project_phone_flex {
     padding: 20px;
+  }
+  .project_present__swiper {
+    height: 240px;
   }
   .articles__top {
     padding: 0 20px 20px;
@@ -8690,6 +8739,10 @@ html.has-scroll-dragging {
   }
   .contacts__social_project {
     gap: 30px;
+  }
+  .career_top__block {
+    padding: 40px 0;
+    gap: 20px;
   }
   .career_top {
     height: calc(var(--height) - 67px);
