--- a/css/style.css
+++ b/css/style.css
@@ -4315,6 +4315,16 @@ html.has-scroll-dragging {
   background-position: center top;
 }
 
+.project_top__back {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  object-fit: cover;
+}
+
 .project_top__shadow::before {
   content: "";
   width: 100%;
@@ -4328,6 +4338,7 @@ html.has-scroll-dragging {
 
 .project_top__container {
   height: 100%;
+  z-index: 2;
 }
 
 .project_top__block {
