--- a/css/style.css
+++ b/css/style.css
@@ -730,6 +730,7 @@ section {
   transition: transform 0.35s cubic-bezier(0.76, 0, 0.24, 1);
 }
 
+.header__nav_item.active .header__nav_link .text .text__rotate span,
 .text:hover .text__rotate span {
   -webkit-transform: translateY(-100%);
   transform: translateY(-100%);
@@ -1678,7 +1679,7 @@ html.has-scroll-dragging {
 
 .header__nav {
   width: 100%;
-  height: calc(var(--height) - 81px);
+  height: calc(var(--height) - 80px);
   position: fixed;
   top: 0px;
   left: 0;
@@ -1766,7 +1767,47 @@ html.has-scroll-dragging {
 }
 
 .header__subnav_list {
-  display: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  gap: 15px;
+  position: absolute;
+  top: 0;
+  left: calc(100% + 70px);
+  opacity: 0;
+  -webkit-transition: opacity 0.3s linear;
+  transition: opacity 0.3s linear;
+  counter-reset: n;
+  z-index: 0;
+}
+
+.header__nav_item.active .header__subnav_list {
+  opacity: 1;
+  z-index: 1;
+}
+
+.header__subnav_item {
+  position: relative;
+  top: 10%;
+  opacity: 0;
+  -webkit-transition: opacity 0.3s linear, top 0.2s linear;
+  transition: opacity 0.3s linear, top 0.2s linear;
+}
+
+.header__nav_item.active .header__subnav_item {
+  top: 0;
+  opacity: 1;
+  -webkit-transition: opacity 0.3s linear, top 0.2s linear;
+  transition: opacity 0.3s linear, top 0.2s linear;
+  -webkit-transition-delay: calc(var(--inc-step)*0.1s);
+  transition-delay: calc(var(--inc-step)*0.1s);
+}
+
+.header__subnav_link {
+  text-transform: uppercase;
 }
 
 .header__nav_contact_item:not(:last-child) {
@@ -1950,7 +1991,7 @@ html.has-scroll-dragging {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: calc(var(--height) - 81px);
+  height: calc(var(--height) - 80px);
   flex-direction: column;
   position: fixed;
   top: 0px;
