--- a/css/style.css
+++ b/css/style.css
@@ -1752,8 +1752,7 @@ html.has-scroll-dragging {
   display: -ms-flexbox;
   display: -webkit-box;
   display: flex;
-  width: calc(50% - 250px);
-  padding: 0 50px;
+  width: 364px;
   flex-direction: column;
   justify-content: space-between;
   gap: 60px;
@@ -1996,8 +1995,7 @@ html.has-scroll-dragging {
 }
 
 .header__set_language {
-  width: calc(50% - 250px);
-  padding: 0 50px;
+  width: 364px;
   align-items: center;
 }
 
@@ -7198,9 +7196,8 @@ html.has-scroll-dragging {
   .btn {
     height: 40px;
   }
-  .header__nav__contact,
-  .header__set_language {
-    width: calc(50% - 20px);
+  .header__nav_container {
+    padding: 60px 120px;
   }
   .main__border {
     width: calc(100% - 240px);
@@ -7697,6 +7694,9 @@ html.has-scroll-dragging {
   }
   .header__nav_flex {
     justify-content: space-between;
+  }
+  .header__nav_item {
+    width: 100%;
   }
   .header__nav_list,
   .header__nav__contact,
@@ -8510,6 +8510,16 @@ html.has-scroll-dragging {
     display: flex;
     flex-direction: column;
     gap: 20px;
+  }
+  .header__nav_list,
+  .header__set_block {
+    width: 60%;
+    padding: 0;
+  }
+  .header__nav__contact,
+  .header__set_language {
+    width: 40%;
+    padding: 0;
   }
   .main__border {
     width: calc(100% - 40px);
